# mipt_courses

./: .gitignore  README.md
computational_math/practical_tasks/1-direct-methods/: Solution.ipynb
computer_graphics/: CMakeLists.txt  README.md
computer_graphics/homework_1_sphere/: ColorFragmentShader.fragmentshader  Sphere.mov  sphere  sphere.cpp
computer_graphics/homework_1_two_triangles/: GreenTriangleFragmentShader.fragmentshader  RedTriangleFragmentShader.fragmentshader  TwoTriangles.mov  VertexShader.vertexshader  triangles.cpp  two_triangles
